# launch-decision-gate

./: .dockerignore  .gitignore  AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/: pull_request_template.md
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: data-guide.md  decision-guide.md  methods.md  sources-and-originality.md
examples/: gatesignal-blank-template.xlsx  gatesignal-fictional-demo.json  gatesignal-fictional-demo.xlsx
scripts/: generate_examples.py
src/gatesignal/: __init__.py  brand.py  decision.py  errors.py  examples.py  finance.py  interop.py  io.py  risk.py  scoring.py
tests/: test_app_pages.py  test_brand.py  test_finance.py  test_interop.py  test_io.py  test_risk_decision.py  test_scoring.py
